[package]
name = "rust-hcl-parser"
version = "0.1.0"
authors = ["zac <z.t.lewis@lavabit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }
